--- a/public/css/assetmap.css
+++ b/public/css/assetmap.css
@@ -51,3 +51,23 @@ button:hover {
   transform: translateY(-2px);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
+
+.modal {
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border: 1px solid #ccc;
+  background-color: gey;
+  z-index: 1000;
+  padding: 20px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+  margin-bottom: 20px;
+}
+
+.modal-footer {
+  text-align: right;
+}
